tests/reference/ast_new-if2-c3b6022.stderr
tokenizer error: Token '\' is not recognized
  --> tests/parser/if2.py:10:9
   |
10 | if x is \
   |         ^ token not recognized
